# textbookGenerator

./: README.md  app.py  check.py  pyproject.toml  requirements.txt
