[project]
name = "textbook_generator"
version = "0.1.0"
description = "AI-powered textbook generator"
authors = [
    { name = "Sai Charan", email = "saicharankonkipidi@gamil.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai",
    "fpdf",
    "python-dotenv"
]
